fix/ role bind sa

--- a/templates/jenkins-service-account.yaml
+++ b/templates/jenkins-service-account.yaml
@@ -71,6 +71,6 @@ roleRef:
   kind: ClusterRole
   name: jenkins-cluster-role
 subjects:
-  - apiGroup: rbac.authorization.k8s.io
-    kind: Group
-    name: system:serviceaccount:jenkins-server:jenkins-service-account
+  - kind: ServiceAccount
+    name: jenkins-service-account
+    namespace: jenkins-server
