--- a/templates/jenkins-service-account.yaml
+++ b/templates/jenkins-service-account.yaml
@@ -1,9 +1,9 @@
 ---
-apiVersion: v1
-kind: ServiceAccount
-metadata:
-  name: jenkins-service-account
-  namespace: jenkins-server
+# apiVersion: v1
+# kind: ServiceAccount
+# metadata:
+#   name: jenkins-service-account
+#   namespace: jenkins-server
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
@@ -72,5 +72,8 @@ roleRef:
   name: jenkins-cluster-role
 subjects:
   - kind: ServiceAccount
-    name: jenkins-service-account
+    name: default
     namespace: jenkins-server
+  # - kind: ServiceAccount
+  #   name: jenkins-service-account
+  #   namespace: jenkins-server
