up/default service type elb

--- a/values.yaml
+++ b/values.yaml
@@ -1,7 +1,6 @@
 jenkins: # dependencies specific
   controller:
-    # serviceType: LoadBalancer
-    serviceType: ClusterIP
+    serviceType: LoadBalancer
   # serviceAccount:
   #   create: false
   #   name: jenkins-service-account
